--- a/.github/workflows/hi.yaml
+++ b/.github/workflows/hi.yaml
@@ -1,10 +1,14 @@
 name: Hi
 
-jobs:
-  name: Oh hello
-  runs-on: ubuntu@latest
+on:
+  workflow_dispatch:
 
-  steps:
-  - name: Be polite
-    run: |
-      echo "Hello. It's $(date)."
+jobs:
+  hello:
+    name: Oh hello
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Be polite
+      run: |
+        echo "Hello. It's $(date)."
